; ModuleID = '/home/carl/AnghaBench/linux/drivers/soc/imx/extr_gpc.c_imx_pgc_put_clocks.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/soc/imx/extr_gpc.c_imx_pgc_put_clocks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.imx_pm_domain = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.imx_pm_domain*)* @imx_pgc_put_clocks to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @imx_pgc_put_clocks(%struct.imx_pm_domain* %0) #0 {
  %2 = alloca %struct.imx_pm_domain*, align 8
  %3 = alloca i32, align 4
  store %struct.imx_pm_domain* %0, %struct.imx_pm_domain** %2, align 8
  %4 = load %struct.imx_pm_domain*, %struct.imx_pm_domain** %2, align 8
  %5 = getelementptr inbounds %struct.imx_pm_domain, %struct.imx_pm_domain* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  %7 = sub nsw i32 %6, 1
  store i32 %7, i32* %3, align 4
  br label %8

8:                                                ; preds = %20, %1
  %9 = load i32, i32* %3, align 4
  %10 = icmp sge i32 %9, 0
  br i1 %10, label %11, label %23

11:                                               ; preds = %8
  %12 = load %struct.imx_pm_domain*, %struct.imx_pm_domain** %2, align 8
  %13 = getelementptr inbounds %struct.imx_pm_domain, %struct.imx_pm_domain* %12, i32 0, i32 1
  %14 = load i32*, i32** %13, align 8
  %15 = load i32, i32* %3, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i32, i32* %14, i64 %16
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @clk_put(i32 %18)
  br label %20

20:                                               ; preds = %11
  %21 = load i32, i32* %3, align 4
  %22 = add nsw i32 %21, -1
  store i32 %22, i32* %3, align 4
  br label %8

23:                                               ; preds = %8
  ret void
}

declare dso_local i32 @clk_put(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
